--- a/Assig1/Views/Expiations/Index.cshtml
+++ b/Assig1/Views/Expiations/Index.cshtml
@@ -1,17 +1,18 @@
 ﻿@model Assig1.ViewModels.ExpiationInsightsViewModel
 
-<div class="container my-5">
-    <h2 class="mb-4">Expiation Insights</h2>
 
-    <!-- Filter Information -->
-    <div class="alert alert-info">
+<div class="text-dark bg-gradient bg-warning p-2 my-2 border rounded">
+    <h2 class="text-dark"> Expiations DashBoard</h2>
+</div>
+
+<div class="alert alert-info">
     <p>
-        <strong>Year:</strong> @(Model.Year.HasValue ? Model.Year.Value.Year.ToString("YYYY") : "All Years")<br />
+        <strong>Year:</strong> @(Model.Year.HasValue ? Model.Year.Value.Year.ToString("YYYY") : "2024")<br />
     </p>
 </div>
 
 
-    <!-- Complex Stats Section -->
+
     <div class="row">
         <div class="col-md-4 mb-4">
             <div class="card">
@@ -50,20 +51,9 @@
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center">
                             Average Speed
-                            <span class="">@Model.AvgSpeed</span>
+                            <span class="">@Model.AvgSpeed.ToString("C")</span>
                         </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            Maximum BAC
-                            <span class="">@Model.MaxBAC</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            Minimum BAC
-                            <span class="">@Model.MinBAC</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            Average BAC
-                            <span class="">@Model.AvgBAC</span>
-                        </li>
+                 
                     
                     </ul>
                 
@@ -81,6 +71,29 @@
                         <li class="list-group-item d-flex justify-content-between align-items-center">
                             Frequency of Expiations
                             <span class="b">@Model.Frequency</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <div class="card-header bg-secondary text-white">
+                    <strong>Drinking Statistics</strong>
+                </div>
+                <div class="card-body">
+                    <ul class="list-group">
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            Maximum BAC
+                            <span class="">@Model.MaxBAC</span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            Minimum BAC
+                            <span class="">@Model.MinBAC</span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            Average BAC
+                            <span class="">@Model.AvgBAC?.ToString("F3")</span>
                         </li>
                     </ul>
                 </div>
