--- a/Assig1/Views/Offences/Details.cshtml
+++ b/Assig1/Views/Offences/Details.cshtml
@@ -1,12 +1,17 @@
 ﻿@model Assig1.ViewModels.OffenceDetailViewModel
 
-<div class="container mt-5">
-    <h2 class="text-center mb-4">Offence Dashboard</h2>
 
-  
+
+
+<div class="text-dark bg-gradient bg-warning p-2 my-2 border rounded">
+    <h2 class="text-dark"> Offence Details</h2>
+</div>
+
+<div class="container mt-5">
+    
     <div class="card mb-4">
         <div class="card-body">         
-             <h2>Offence Details</h2>      
+               
             <p><strong>Offence Code:</strong> @Model.OffenceCode</p>
             <p><strong>Description:</strong> @Model.Description</p>
             <p><strong>Section Code:</strong> @Model.SectionCode</p>
@@ -43,7 +48,7 @@
             </ul>
         </div>
     </div>
-    <h3>Expiations Per Month</h3>
+    <h3>Expiations Per Month Chart</h3>
     <div>
         <svg id="expiationsPerMonthChart" width="100%" height="500px" class="border border-primary rounded p-2"></svg>
     </div>
