--- a/Assig1/Views/Offences/Index.cshtml
+++ b/Assig1/Views/Offences/Index.cshtml
@@ -3,22 +3,24 @@
 @{
     ViewData["Title"] = "Index";
 }
+<div class="text-dark bg-gradient bg-warning p-2 my-2 border rounded">
+    <h2 class="text-dark"> Offences DashBoard</h2>
+</div>
 
-<h1 class="mb-4">Search Offences</h1>
-
-<p>
-    <a asp-action="Create" class="btn btn-success">Create New Offence</a>
-</p>
-
+@* 
+   <p>
+       <a asp-action="Create" class="btn btn-success">Create New Offence</a>
+   </p>
+ *@
 <form asp-controller="Offences" asp-action="Index" method="get" class="row g-3 mb-4">
 
     <div class="col-md-4">
-        <label for="SearchText" class="form-label">Search by Description</label>
+        <label for="SearchText" class="form-label"><strong>Search by Description</strong></label>
         <input type="text" class="form-control" asp-for="SearchText" id="searchText" placeholder="Enter description ..." title="Enter description" />
     </div>
 
     <div class="col-md-3">
-        <label for="categoryId" class="form-label">Expiation Category</label>
+        <label for="categoryId" class="form-label"><strong>Expiation Category</strong></label>
         <select asp-for="CategoryId" class="form-select" title="View categories" asp-items="Model.CategoryList" aria-label="Select category">
             <option value="">All Expiation Categories</option>
         </select>
@@ -75,7 +77,7 @@
             let categoryId = event.target.value;
             console.log("categoryId: " + categoryId);
 
-            // Fetch the data (number of offences per category)
+            // Fetch the data 
             if (categoryId > 0) {
                 clearGraph();
                 fetch(`/Offences/GetOffenceData?categoryId=${categoryId}`)
@@ -85,11 +87,11 @@
                         return response.json();
                     })
                     .then(data => {
-                        console.log("Fetched data: ", data);  // Log data 
+                        console.log("Fetched data: ", data);  
                         buildGraph(data);
                     })
                     .catch(err => console.log(err.message));
-        
+  
             }
         });
 
@@ -104,9 +106,8 @@
             if (!dataSet || dataSet.length === 0) {
                 console.log("Dataset is empty or undefined.");
             } else {
-                // Calculate the maximum value for totalFee
+                // Calculate the maximum value 
                 maxTotalFee = d3.max(dataSet, d => d.totalFee || 0);
-
                 console.log("Max maxTotalFee: " + maxTotalFee);
             }
 
@@ -148,7 +149,6 @@
                     // returns transform ="translate(x,y)"
                 }); // end transform
 
-            //10 implement yScale
             //11 animate
             newBarGroups
                 .append('rect')
@@ -175,7 +175,7 @@
 
             //11 create the axis and add it to the svg
             //12.5 append the y-Axix to the chartGroup
-            let yAxis = d3.axisLeft(yScale);  //declare the axis generator
+            let yAxis = d3.axisLeft(yScale);  
             chartGroup.append('g')
                 .classed('axis y', true)
                 .call(yAxis);
@@ -197,7 +197,6 @@
         }
     </script>
 }
-
 
 
 @if (Model.Offences != null && Model.Offences.Any())
