--- a/Assig1/Views/Expiations/Index.cshtml
+++ b/Assig1/Views/Expiations/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@model Assig1.ViewModels.ExpiationInsightsViewModel
 
 
-<div class="text-dark bg-gradient bg-warning p-2 my-2 border rounded">
-    <h2 class="text-dark"> Expiations DashBoard</h2>
+
+<div class="bg-custom p-5">
+    <h1>Expiations DashBoard!</h1>
+
 </div>
 
 <div class="alert alert-info">
