--- a/Assig1/Views/Home/About.cshtml
+++ b/Assig1/Views/Home/About.cshtml
@@ -1,18 +1,17 @@
-﻿<div class="text-dark bg-gradient bg-warning p-2 my-2 border rounded">
-    <h2>Expiation Data About</h2>
-</div>
+﻿
 
+<div class="bg-custom p-5">
+    <h1>Expiation Data About</h1>
+
+</div>
 <div class="row justify-content-center">
     <div class="col-6">
         <p>
-            Welcome to the world of road rules and Expiations! Your every move is being watched - at every red light, 
-            as you pass the speed limit, and don't forget to give-way at that intersection!. But what happens when drivers 
-            push their luck? They end up in the SA Gov Expiations DB, a treasure trove of every traffic slip-up and criminal
-            act that happens on SA roads.</p>
-            <p>
-            From tracking speeding trends to uncovering the busiest intersections for red light runners, your job is 
-            to transform this raw data into insights and demonstrate your understanding of modern web development along 
-            the way. So buckle up—this is one road trip you won’t want to miss!
+            My name is Andrew, and I’m a student at the University of South Australia. I created this project to raise awareness about road safety and provide valuable insights for both the public and decision-makers. By making road crash data and expiation notices more accessible, my goal is to help reduce accidents and save lives by identifying high-risk areas, encouraging safer driving habits, and offering a deeper understanding of traffic offences.
+
+            This project allows users to search for road offences and explore expiation notices issued for various traffic violations. It helps paint a clearer picture of common offences and where they occur, contributing to more informed decisions on improving road safety.
+
+            The project uses two key datasets: **Road Crash Locations in South Australia** and the **Expiation Notice System Data**, both sourced from [Data SA](https://data.sa.gov.au/). These datasets provide a comprehensive view of crash locations and expiations across the state, offering a valuable tool to understand the challenges on our roads. I hope this tool will play a role in making South Australian roads safer for everyone.
         </p>
         <p>
             The original data sets and their explanations can be found on Data SA's Website':
