--- a/Assig1/Views/Home/Index.cshtml
+++ b/Assig1/Views/Home/Index.cshtml
@@ -2,15 +2,18 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-dark bg-gradient bg-warning p-2 my-2 border rounded">
-    <h2 class="text-dark">Expiations SA Home</h2>
+
+<div class="bg-custom p-5">
+    <h1>Welcome to Road Safety SA!</h1>
+
 </div>
 
 <div class="row">
     <div class="col-8">
         <p>
-            This assignment focuses on utilizing Models, ViewModels, Lambda/LINQ, and Razor Code to present expiation data collected by the SA Government. 
-            Through this project, you will gain hands-on experience in querying large data sets using the Entity Framework ORM, retrieving data, manipulating data, and building interactive web applications to visualize and present information.
+            Road safety is a major issue in Australia, with hundreds of lives lost and thousands more affected by injuries from car accidents each year. In comparison to other states, South Australia has seen a significant decline in fatalities and serious injuries related to road crashes over the past 30 years. However, despite these improvements, more than 100 people still die annually, and around a thousand are injured in road crashes in the state.
+            <br><br>
+            This interactive map presents detailed data on road crash locations across South Australia. By visualizing official crash data, this tool highlights high-risk areas and helps support better planning for safer roads. Use the map to explore real-time crash data, zoom in on specific areas, and gain valuable insights into crash hotspots.
         </p>
     </div>
 </div>
@@ -18,10 +21,13 @@
 <!-- Div to hold the map -->
 <div class="row">
     <div class="col-12">
-        <h3 class="text-dark">Explore Expiation Data on the Map</h3>
+        <h3 class="">Explore Expiation Data on the Map </h3>
+        <h4 class="">User:Okokanhem0506  </h4>
+        <h5 class="">Password: SouthAus24</h5>
         <div id="mapDiv" style="width: 100%; height: 600px;"></div> <!-- Map will render here -->
     </div>
 </div>
+
 
 <!-- ArcGIS JavaScript API -->
 <script src="https://js.arcgis.com/4.30/"></script>
