--- a/Assig1/Views/Offences/Index.cshtml
+++ b/Assig1/Views/Offences/Index.cshtml
@@ -3,10 +3,12 @@
 @{
     ViewData["Title"] = "Index";
 }
-<div class="text-dark bg-gradient bg-warning p-2 my-2 border rounded">
-    <h2 class="text-dark"> Offences DashBoard</h2>
-</div>
 
+
+<div class="bg-custom p-5">
+    <h1>Offences DashBoard</h1>
+
+</div>
 @* 
    <p>
        <a asp-action="Create" class="btn btn-success">Create New Offence</a>
