--- a/Assig1/Views/Shared/_Layout.cshtml
+++ b/Assig1/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewBag.Title - Assig1</title>
+    <title>@ViewBag.Title - Road Safety SA!</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Assig2.styles.css" asp-append-version="true" />
@@ -36,6 +36,9 @@
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <div class="collapse navbar-collapse">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item nav-link-1">
+                                Road Safety SA!
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link text-white @IsActive("Home")" asp-controller="Home" asp-action="Index">Home</a>
                             </li>
